# libnekit

./: .clang-format  .codacy.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Pipfile  README.md  appveyor.yml  build.py  codecov.yml  conanfile.py  conanfile.txt  sonar-project.properties
.travis/: install.sh  run.sh  sonar_build.sh
boost/: Jamroot  boostcpp.jam  bootstrap.bat
cmake/: Sugar
cmake/Hunter/: config.cmake
cmake/collecting/: sugar_include.cmake
cmake/core/: sugar_add_gtest.cmake  sugar_add_ios_gtest.cmake  sugar_add_this_to_sourcelist.cmake  sugar_get_WIN32_WINNT.cmake  sugar_link_timestamp.cmake
cmake/print/: sugar_fatal_error.cmake
cmake/toolchain/: clear_env.cmake  fatal_error.cmake  ios.cmake  mac.cmake
cmake/utility/: sugar_check_no_duplicates.cmake  sugar_generate_warning_flag_by_name.cmake  sugar_get_all_xcode_warning_attrs.cmake  sugar_test_directory_exists.cmake  sugar_test_file_exists.cmake  sugar_test_target_exists.cmake  sugar_warning_unpack_one.cmake
conan/: ios
include/nekit/: config.h  hedley.h  init.h  instance.h  proxy_manager.h
modules/CxxUrl/: LICENSE  url.cc  url.h
modules/http_parser/: http_parser.c  http_parser.h
modules/picohttpparser/: picohttpparser.c
scripts/: build_boost_ios.sh  build_deps.py  find_include_path.sh  install_cmake.sh  travis.sh  travis_check_deps.sh
src/: init.cc  instance.cc  proxy_manager.cc
src/crypto/: key_generator.cc  random.cc  stream_cipher_interface.cc  tls_tunnel.cc
src/data_flow/: http_data_flow.cc  http_server_data_flow.cc  socks5_data_flow.cc  socks5_server_data_flow.cc  speed_data_flow.cc  tls_data_flow.cc
src/rule/: all_rule.cc  dns_fail_rule.cc  domain_regex_rule.cc  domain_rule.cc  geo_rule.cc  (+3 more)
sugar/: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  sugar-config.cmake.in
sugar/cmake/: README.md
sugar/cmake/collecting/: README.md  sugar_files.cmake
sugar/cmake/core/: README.md  sugar_add_ios_gtest.cmake  sugar_doxygen_generate.cmake  sugar_groups_generate.cmake
sugar/cmake/print/: README.md  sugar_status_debug.cmake  sugar_status_print.cmake
sugar/cmake/utility/: README.md  sugar_echo_target.cmake  sugar_echo_target_property.cmake  sugar_execute_process.cmake  sugar_expected_number_of_arguments.cmake  sugar_find_python3.cmake  sugar_generate_warning_xcode_attr_by_name.cmake  sugar_improper_number_of_arguments.cmake  sugar_test_variable_not_empty.cmake
sugar/examples/: Doxyfile.in  README.md  test.py
sugar/examples/00-detect/: CMakeLists.txt
sugar/examples/01-simple/: CMakeLists.txt
sugar/examples/01-simple/sources/: CMakeLists.txt
sugar/examples/02-common/: CMakeLists.txt
sugar/examples/02-common/sources/module_a/: A.hpp  sugar.cmake
sugar/examples/02-common/sources/module_a/main/: CMakeLists.txt
sugar/examples/02-common/sources/module_b/: sugar.cmake
sugar/examples/02-common/sources/module_b/main/: CMakeLists.txt
sugar/examples/03-ios-gtest/: CMakeLists.txt
sugar/examples/04-gtest-universal/: CMakeLists.txt
sugar/examples/05-groups/: CMakeLists.txt
sugar/examples/05-groups/sources/: sugar.cmake
sugar/examples/05-groups/sources/module_a/: A.cpp  sugar.cmake
sugar/examples/05-groups/sources/module_a/main/: CMakeLists.txt  main.cpp
sugar/examples/05-groups/sources/module_a/subdir/: sugar.cmake
sugar/examples/05-groups/sources/module_b/: B.cpp  B.hpp  sugar.cmake
sugar/examples/05-groups/sources/module_b/main/: CMakeLists.txt  main.cpp
sugar/examples/05-groups/sources/module_b/subdir/: sugar.cmake
sugar/examples/06-ios/_universal_library/: CMakeLists.txt  FooConfig.cmake.in
sugar/examples/06-ios/_universal_library/sources/: Foo.cpp  Foo.hpp  sugar.cmake
sugar/examples/06-ios/empty_application/: CMakeLists.txt
sugar/examples/06-ios/empty_application/sources/: AppDelegate.hpp  sugar.cmake
sugar/examples/06-ios/link_package/: CMakeLists.txt
sugar/examples/06-ios/link_package/sources/: main.cpp  sugar.cmake
sugar/examples/06-ios/single_view_application/: CMakeLists.txt
sugar/examples/06-ios/single_view_application/sources/: AppDelegate.hpp  AppDelegate.mm  ViewController.hpp  ViewController.mm  main.mm  sugar.cmake
sugar/examples/07-cocoa-application/: CMakeLists.txt
sugar/examples/07-cocoa-application/resources/: MainMenu.xib  sugar.cmake
sugar/examples/07-cocoa-application/sources/: AppDelegate.h  AppDelegate.mm  main.mm  sugar.cmake
sugar/examples/08-doxygen/: CMakeLists.txt
sugar/examples/08-doxygen/sources/: A.cpp  A.hpp  B.cpp  B.hpp  C.hpp  Group.hpp  main.cpp  sugar.cmake
sugar/examples/11-timestamp/: CMakeLists.txt  main.cpp
sugar/examples/detail/: README.md  argparse.py  command.py  os.py  os_detect.py  print.py  trash.py  utility.py
sugar/examples/plist/ios/: empty.plist.in  storyboard.plist.in
sugar/examples/plist/macosx/: breakpad.plist.in
sugar/examples/resources/ios/icons/: sugar.cmake
sugar/examples/resources/ios/icons/app/: sugar.cmake
sugar/examples/resources/ios/icons/settings/: sugar.cmake
sugar/examples/resources/ios/icons/spotlight/: sugar.cmake
sugar/examples/resources/ios/images/: sugar.cmake
sugar/examples/resources/ios/images/ipad/: sugar.cmake
sugar/examples/resources/ios/images/iphone/: sugar.cmake
sugar/examples/resources/ios/storyboards/: sugar.cmake
sugar/python/: generate_sugar_files.py  groups_generator.py  ios_simulator_launcher.py  sugar-generate-warnings.py  sugar-warning-update-local.sh  timestamp_update.py
sugar/python/sugar/: groups.py  groups_generator.py  sugar_warnings_cmake_flags_generator.py  sugar_warnings_leathers_generator.py  sugar_warnings_wiki_table_generator.py
sugar/wiki/images/collecting/src/: intro-tuning-listing.graphml  listing.graphml  sugar.graphml  tuning.graphml
test/: CMakeLists.txt  GeoLite2-Country.mmdb  base64_test.cc  buffer_test.cc  http_message_stream_rewriter_test.cc  maxmind_test.cc  socks5_server_stream_coder_test.cc  socks5_stream_coder_session_test.cc  stream_coder_pipe_test.cc  subnet_test.cc  trie_test.cc
test/mock/: stream_coder.h
test_package/: CMakeLists.txt  conanfile.py  example.cpp
(+705 files in other folders)
